# dicom-mcp

./: GEMINI.md  LICENSE  README.md  check_dicom_tags.py  code.md  configuration.yaml  pyproject.toml  query_instances.py  query_series.py  query_studies.py  test_client.py  test_dicom_mcp_client.py  verify_instance.py
doc/: llms-full.txt  promts.md  tool2resource.md
integracion/: api_main.py
src/dicom_mcp/: __init__.py  __main__.py  attributes.py  classification_wrapper.py  config.py  configuration.yaml  dicom_client.py  dicom_scp.py  models.py  mtf_processor_wrapper.py  nnps_processor_wrapper.py  server copy.py  server.py
src/dicom_mcp/DQE/: dqe_analyzer.py  main_dqe_analyzer.py
src/dicom_mcp/MTF/: dicommcp.md  main_mtf_processor.py  mtf_analyzer.py  mtf_calculator.md  plan.md  roi_extractor.py  utils.py
src/dicom_mcp/NNPS/: nnps_analyzer.py
tests/: dev.py  test.py  test_dicom_mcp.py  test_dicom_move.py  test_dicom_servers.yaml  uids_ref.txt
