[project]
name = "dicom-mcp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.0.0",
    "numpy>=2.3.1",
    "pynetdicom>=2.1.1",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "pandas>=2.3.1",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.3",
    "pydicom>=3.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "pydicom>=2.4.0",
    "pytest-cov>=6.0.0",
    "reportlab"
]
[project.scripts]
dicom-mcp = "dicom_mcp.__main__:main"
